style.css
*, html,::before, ::after{
    box-sizing: border-box;
    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
}

body{
    background-color: rgb(167, 167, 167);
}

.container{
    display: flex; 
    justify-content: center;
    align-items: center;
    flex-direction: row;
    overflow: hidden;
}

#image-placeholder{
    width: 40vw;
    height: 100vh;
    background-color: rgb(163, 58, 128);
}

img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}

#image-place-holder, .par-and-form-background{
    vertical-align: bottom;
}

.par-and-form-background{
    background-color: rgb(255, 255, 255);
    width: 60vw;
    height: 100vh;
}


.title-and-image-placeholder{
    position: relative;
    text-align: center;
    opacity: 85%;
}


#botany-basics-title{
    color: rgb(255, 255, 255);
    font-size: 40px;
    font-family:'Segoe UI', Tahoma,Verdana, sans-serif;
    font-weight: bold;
    position: absolute;
    background-color: rgb(10, 10, 10, .2);
    width: 100%;
    height: 100px;

    display: flex;
    justify-content: center;
    align-items: center;
    
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 100%;
    text-transform: uppercase;
}

.sign-up-now-par{
    font-size: 25px; 
    font-weight: bold;
    
   margin: auto;
   padding-top: 40px;
}

.required-asterisk-par{
    font-size: 16px;
    padding-top: 60px;
}

.sign-up-now-par, .required-asterisk-par{
    position: relative;
   left: 10px;
}


label{
    display: block;
    text-transform: uppercase;
    font-size: 15px;
}

.optional{
    text-transform: lowercase;
}

input{
    appearance: none;
    width: 300px;
    height: 40px;
    margin-bottom: 30px; 
    border-radius: 8px;
}

input:focus{
    outline: none;
    border: 2.5px solid rgb(128, 161, 112);
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
}


ul {
    list-style-type: none;  
    background-color: rgb(255, 255, 255);  
    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);

    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 100px 100px;

    padding: 80px;
 
}


/*Sign Up Button*/

.submit-button{
    width: 150px;
    height: 50px;
    font-size: 30px;

    background-color: rgb(155, 32, 93);
    color: white;
    font-weight: bold;
    border-radius: 5px;
    border: none;

    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
    text-align: center;
}


.submit-button:hover{
    background-color: rgb(228, 151, 189);
}


.have-account-par{
    padding-top: 10px;
    text-align: left; 
}


 /*Login Link*/
 .login-link{
    text-decoration: none;
    color: rgb(155, 32, 93);
    font-weight: bold;
}


.login-link:hover{
color: rgb(228, 151, 189);
}


/*Footer*/
footer{
        background-color: black;
        height: 50px;
        width: 100vw;

        display: flex;
        align-items: center;
        justify-content: center;    

        position: fixed;
        bottom: 0;
        left: 0;
        right: 0;
    
    }

footer p{
        color: white;
        text-align: center;
    }


    /*MEDIA QUERIES*/
    /*number and below*/
@media(max-width:1120px){

    .container{
        display: flex;
        flex-direction: column;
    }

    #image-placeholder,form, .par-and-form-background{
        width: 100vw;
    }

    ul{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

    }

    .sign-up-now-par{
        max-width: 600px;

    }

}

@media(max-width: 379px){

    input{
        max-width: 200px;
    }

    .sign-up-now-par, .required-asterisk-par{
        max-width: 250px;
    }

    .have-account-par{
        text-align: center;
    }

}

